# icm-services

./: .gitignore  .gitmodules  .golangci.yml  .solhint.json  .solhintignore  CONTRIBUTING.md  README.md  errors.txt  foundry.toml  go.mod  go.sum  output.txt  received.txt  remappings.txt  sample-relayer-config.json  slither.config.json
.github/: dependabot.yml
cache/: fifo_cache.go  singleflight.go  ttl_cache.go  ttl_cache_test.go
config/: api_config.go
database/: database.go  database_test.go  json_file_storage.go  json_file_storage_test.go  redis.go  relayer_id.go  utils.go
ethereum/: run_ethereum_network.sh
icm-contracts/: .gitmodules  .golangci.yml  README.md  go.mod  go.sum  remappings.txt
icm-macros/: Cargo.toml  README.md
icm-macros/src/: main.rs  pack.rs  solhint.rs  unpack.rs
icm-macros/src/pack/: hooks.rs  methods.rs
icm-macros/src/unpack/: hooks.rs  methods.rs
icm-macros/testing/e2e/: RoundTrip.sol  foundry.toml
icm-macros/testing/e2e/tests/: RoundTrip.t.sol
icm-macros/testing/pack/errors/: BadContract.sol  BadLengthType.sol  FunctionField.sol  FunctionInArray.sol  MappingField.sol  MappingInArray.sol
icm-macros/testing/pack/expected/: Basic.sol  Contracts.sol  NestedTypes.sol  Renaming.sol  SizeOverrides.sol
icm-macros/testing/pack/source/: Basic.sol  Contracts.sol  NestedTypes.sol  Renaming.sol  SizeOverrides.sol
icm-macros/testing/unpack/errors/: BadContract.sol  BadLengthType.sol  EachOnCustom.sol  EachOnEnum.sol  EachOnNonContainer.sol  EachOnStruct.sol  FunctionField.sol  FunctionInArray.sol  MappingField.sol  MappingInArray.sol
icm-macros/testing/unpack/expected/: Basic.sol  Contracts.sol  NestedTypes.sol  PostConditions.sol  Renaming.sol  SizeOverrides.sol
icm-macros/testing/unpack/source/: Basic.sol  Contracts.sol  NestedTypes.sol  PostConditions.sol  Renaming.sol  SizeOverrides.sol
icm-relayer-tests/: .env  c-chain-dispatch.json  run-relayer.go  sender_receiver_info.json  test_relayer.go
log/: global_logger.go
messages/: message_handler.go
peers/: app_request_network.go  app_request_network_metrics.go  app_request_network_test.go  app_request_network_test_helper.go  app_request_network_test_utils.go  external_handler.go  info_client_test.go  network_info.go  p2p_client.go  proposervm_client_test.go  validator_manager.go  validator_manager_test.go
relayer/: README.md  application_relayer.go  application_relayer_metrics.go  diff_set_updater.go  diff_set_updater_test.go  listener.go  message_coordinator.go  message_handler_factory.go  network_utils.go  subset_set_updater.go  validator_set_updater.go
sample_configs/: c-chain-echo.json  dispatch-c-chain.json  dispatch-echo.json  echo-c-chain.json  echo-dispatch.json
scripts/: abi_bindings.sh  build.sh  build_oracle_sidecar.sh  build_reforge.sh  constants.sh  contracts_e2e_test.sh  deploy_registry.sh  deploy_teleporter.sh  e2e_test.sh  expand_macros.sh  install_avalanchego_release.sh  install_foundry.sh  install_geth.sh  install_sig_agg_release.sh  install_subnetevm_release.sh  lint.sh  nightly_test.sh  parse_config.awk  protobuf_codegen.sh  relayer_e2e_test.sh  unit-test.sh  versions.sh
scripts/tools/zk-proofs-gen/lib/: Cargo.toml
scripts/tools/zk-proofs-gen/lib/prover/: Cargo.toml
scripts/tools/zk-proofs-gen/lib/prover/src/: main.rs
scripts/tools/zk-proofs-gen/lib/sp1-program/: Cargo.toml
scripts/tools/zk-proofs-gen/lib/src/: lib.rs
scripts/tools/zk-proofs-gen/prover/: Cargo.toml  build.rs
scripts/tools/zk-proofs-gen/prover/src/: main.rs
scripts/tools/zk-proofs-gen/prover/tests/: e2e.rs
tests/: basic_relay.go  (+10 more)
(+731 files in other folders)
