[package]
name = "icm-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"

[dependencies]
eyre = "0.6.12"
foundry-compilers = { version = "0.19.14", default-features = false }
reforge = { git = "https://github.com/ava-labs/reforge", rev = "7bea3e4ff05e02cfcccac15b44d3b497ad9b563b" }
solar = {package = "solar-compiler", version = "=0.1.8", default-features = false }

[patch.crates-io]
## solar
solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-interface = { package = "solar-interface", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-ast = { package = "solar-ast", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-sema = { package = "solar-sema", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }