[package]
name = "zk-valset-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { workspace = true, features = ["blocking"] }
merkle-sig-verification = { path = "../lib", features = ["test-utils"] }
alloy-sol-types = "0.8"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
sp1-build = { workspace = true }
