[package]
name = "zk-valset-program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = "6.0.0"
merkle-sig-verification = { path = "../lib" }
alloy-sol-types = "0.8"

[patch.crates-io]
# Pin tags to the sp1-patches releases matching your SP1 version.
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.8-sp1-4.0.0", package = "sha2" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-5.0.0" }
